@@ -48,8 +48,8 @@
 #
 # IGNORE_WITH_PHP=N - The port doesn't work with PHP version N.
 #
-# You may combine multiple WANT_PHP_* knobs.
-# Don't specify any WANT_PHP_* knob if your port will work with every PHP SAPI.
+# You may combine multiple php:* arguments.
+# Don't specify any php:* argument if your port will work with every PHP SAPI.
 #
 # If you are building PHP-based ports in poudriere(8) with ZTS enabled,
 # add WITH_MPM=event to /etc/make.conf to prevent build failures.
@@ -59,25 +59,6 @@
 PHP_Include_MAINTAINER=	ale@FreeBSD.org
 
 _INCLUDE_USES_PHP_MK=	yes
-
-.  if defined(USE_PHPIZE) && empty(php_ARGS:Mphpize)
-php_ARGS+=	phpize
-.  endif
-.  if defined(WANT_PHP_CLI) && empty(php_ARGS:Mcli)
-php_ARGS+=	cli
-.  endif
-.  if defined(WANT_PHP_CGI) && empty(php_ARGS:Mcgi)
-php_ARGS+=	cgi
-.  endif
-.  if defined(WANT_PHP_MOD) && empty(php_ARGS:Mmod)
-php_ARGS+=	mod
-.  endif
-.  if defined(WANT_PHP_WEB) && empty(php_ARGS:Mweb)
-php_ARGS+=	web
-.  endif
-.  if defined(WANT_PHP_EMB) && empty(php_ARGS:Membed)
-php_ARGS+=	embed
-.  endif
 
 .  if ${php_ARGS:Mbuild} && ( ${php_ARGS:Mphpize} || ${php_ARGS:Mext} || ${php_ARGS:Mzend} )
 DEV_WARNING+=	"USES=php:build is included in USES=php:phpize, USES=php:ext, and USES=php:zend, so it is not needed"
@@ -102,7 +83,6 @@ php_ARGS+=	flavors
 .  if ${php_ARGS:Mnoflavors} && ${php_ARGS:Mflavors}
 php_ARGS:=	${php_ARGS:Nflavors}
 .  endif
-
 
 .  if ${php_ARGS:Mpecl}
 php_ARGS+=	ext
