@@ -162,15 +162,15 @@ SANITY_UNSUPPORTED=	USE_OPENAL USE_FAM USE_MAKESELF USE_ZIP USE_LHA USE_CMAKE \
 		PYDISTUTILS_AUTOPLIST PYTHON_PY3K_PLIST_HACK PYDISTUTILS_NOEGGINFO \
 		USE_PYTHON_PREFIX USE_BZIP2 USE_XZ USE_PGSQL NEED_ROOT \
 		UNIQUENAME LATEST_LINK USE_SQLITE USE_FIREBIRD USE_PHPEXT \
-		USE_ZENDEXT USE_PHP_BUILD USE_BDB PLIST_DIRSTRY USE_RCORDER \
-		USE_OPENSSL WANT_GNOME RUBYGEM_AUTOPLIST WANT_SDL INSTALLS_EGGINFO \
-		USE_DOS2UNIX NO_STAGE USE_RUBYGEMS USE_GHOSTSCRIPT \
+		USE_ZENDEXT USE_PHP_BUILD USE_PHPIZE WANT_PHP_CLI WANT_PHP_CGI \
+		WANT_PHP_MOD WANT_PHP_WEB WANT_PHP_EMB USE_BDB PLIST_DIRSTRY \
+		USE_RCORDER USE_OPENSSL WANT_GNOME RUBYGEM_AUTOPLIST WANT_SDL \
+		INSTALLS_EGGINFO USE_DOS2UNIX NO_STAGE USE_RUBYGEMS USE_GHOSTSCRIPT \
 		USE_GHOSTSCRIPT_BUILD USE_GHOSTSCRIPT_RUN USE_AUTOTOOLS APACHE_PORT \
 		USE_FPC_RUN WANT_FPC_BASE WANT_FPC_ALL
 SANITY_DEPRECATED=	PYTHON_PKGNAMESUFFIX MLINKS \
 			USE_MYSQL WANT_MYSQL_VER \
-			USE_PHPIZE WANT_PHP_CLI WANT_PHP_CGI WANT_PHP_MOD \
-			WANT_PHP_WEB WANT_PHP_EMB PYDISTUTILS_INSTALLNOSINGLE \
+			PYDISTUTILS_INSTALLNOSINGLE \
 			USE_APACHE USE_APACHE_BUILD USE_APACHE_RUN
 SANITY_NOTNEEDED=	CMAKE_NINJA WX_UNICODE USE_KDEBASE_VER \
 			USE_KDELIBS_VER USE_QT_VER
@@ -223,15 +223,6 @@ USE_BDB_ALT=		USES=bdb:${USE_BDB}
 USE_MYSQL_ALT=		USES=mysql:${USE_MYSQL}
 WANT_MYSQL_VER_ALT=	USES=mysql:${WANT_MYSQL_VER}
 USE_OPENSSL_ALT=	USES=ssl
-USE_PHPIZE_ALT=		USES=php:phpize
-USE_PHPEXT_ALT=		USES=php:ext
-USE_ZENDEXT_ALT=	USES=php:zend
-USE_PHP_BUILD_ALT=	USES=php:build
-WANT_PHP_CLI_ALT=	USES=php:cli
-WANT_PHP_CGI_ALT=	USES=php:cgi
-WANT_PHP_MOD_ALT=	USES=php:mod
-WANT_PHP_WEB_ALT=	USES=php:web
-WANT_PHP_EMB_ALT=	USES=php:embed
 USE_RCORDER_ALT=	USE_RC_SUBR=${USE_RCORDER}
 WANT_GNOME_ALT=		USES=gnome
 MLINKS_ALT=		it no more
